--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,7 @@
-import "variables";
-import "mixins";
+@import "variables";
+@import "mixins";
 
-import "normalize";
-import "layout";
+@import "normalize";
+@import "layout";
 
-/* Components */
-import "components/form_field";
-
-/* Sections */
-import "section/registration_form";
-
-/* Pages / Views */
-import "pages/registration";
+@import "sections/_top-bar";
