--- a/sass/sections/_top-bar.scss
+++ b/sass/sections/_top-bar.scss
@@ -1,16 +1,18 @@
 .top-bar {
   background-color: white;
   position: sticky;
-  border-bottom: 1px solid gray
 }
-.user{
+
+.user {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   background-color: white;
   width: 100%;
   height: 100%;
   justify-content: flex-end;
   border-bottom: 2px solid gray;
+
   .user-box {
     display: flex;
     align-items: center;
@@ -18,8 +20,19 @@
     border-left: 1px solid gray;
     padding: 10px 0;
     text-align: center;
-    svg {
-      height: 20px;
+
+    .user-box-text {
+      padding-right: 15px;
     }
+  }
+}
+
+@media (max-width: 768px) {
+  .user {
+    display: none;
+  }
+
+  .top-bar {
+    display: none;
   }
 }
