--- a/css/style.css
+++ b/css/style.css
@@ -376,4 +376,121 @@ template {
 .user .user-box svg {
   height: 20px;
 }
+
+.content-general {
+  background-color: white;
+  height: 800px;
+  margin: 15px;
+}
+
+h2 {
+  color: #979797;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.form-data {
+  display: inline-block;
+  border-radius: 2px;
+  border: 1px solid #E3E3E3;
+  margin-right: 15px;
+}
+
+.form-data input[type=text] {
+  border-right: 1px solid grey;
+}
+
+input {
+  padding: 9px;
+  width: 170px;
+  margin: 0;
+  outline-style: none;
+  font-family: "Roboto", sans-serif;
+  border: none;
+}
+
+.section-wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  width: 700px;
+  margin: 0 auto;
+}
+
+.section {
+  margin-top: 20px;
+}
+
+.details {
+  border-bottom: 1px solid grey;
+  padding-bottom: 5px;
+  margin-bottom: 30px;
+  min-width: 300px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  color: gray;
+}
+
+.details h3 {
+  margin: 0;
+  display: inline-block;
+}
+
+.chart {
+  margin: 20px;
+  text-align: center;
+  color: gray;
+}
+
+.chart canvas {
+  max-width: 60%;
+  height: 400px !important;
+  margin: 0 auto;
+}
+
+.data {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  width: 100%;
+  border-bottom: 1px solid grey;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
+.btn {
+  background-color: orange;
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn svg {
+  fill: white;
+  height: 40px;
+  padding: 0;
+}
+
+.btn:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+@media (max-width: 768px) {
+  .section-wrapper {
+    max-width: 700px;
+    display: block;
+    width: auto;
+  }
+  .details {
+    min-width: 50px;
+  }
+}
 /*# sourceMappingURL=style.css.map */
