--- a/sass/sections/_top-bar.scss
+++ b/sass/sections/_top-bar.scss
@@ -1,18 +1,17 @@
 .top-bar {
   background-color: white;
   position: sticky;
+  border-bottom: 1px solid gray;
+  justify-content: flex-end;
 }
-
-.user {
+.user{
   display: flex;
-  flex-wrap: wrap;
   flex-direction: row;
   background-color: white;
   width: 100%;
   height: 100%;
   justify-content: flex-end;
   border-bottom: 2px solid gray;
-
   .user-box {
     display: flex;
     align-items: center;
@@ -20,19 +19,8 @@
     border-left: 1px solid gray;
     padding: 10px 0;
     text-align: center;
-
-    .user-box-text {
-      padding-right: 15px;
+    svg {
+      height: 20px;
     }
-  }
-}
-
-@media (max-width: 768px) {
-  .user {
-    display: none;
-  }
-
-  .top-bar {
-    display: none;
   }
 }
