--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,4 +4,5 @@
 @import "normalize";
 @import "layout";
 
-@import "sections/_top-bar";
+@import "sections/top-bar";
+@import "sections/section-general";
