--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Colors */
 /* Font sizes */
 /* Fonts */
+/* Other */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -422,7 +423,7 @@ input {
   margin-top: 20px;
 }
 
-.details {
+.section-details {
   border-bottom: 1px solid grey;
   padding-bottom: 5px;
   margin-bottom: 30px;
@@ -434,7 +435,7 @@ input {
   color: gray;
 }
 
-.details h3 {
+.section-details h3 {
   margin: 0;
   display: inline-block;
 }
@@ -489,8 +490,176 @@ input {
     display: block;
     width: auto;
   }
-  .details {
+  .section-details {
     min-width: 50px;
+  }
+}
+
+h1 {
+  font-family: 'Dancing Script', cursive;
+  color: #f5f5f2;
+  margin-left: 5px;
+}
+
+.aside-logo {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-align: center;
+      align-items: center;
+  padding: 0 10px;
+  width: 150px;
+}
+
+.icon {
+  display: none;
+}
+
+.sidebar {
+  background-color: #333333;
+  position: -webkit-sticky;
+  position: sticky;
+  height: 100vh;
+}
+
+.side-mobile {
+  background-color: #333333;
+}
+
+.fa-bars {
+  display: inline-block;
+  color: #f5f5f2;
+  padding-left: 20px;
+}
+
+.fas, .far {
+  text-decoration: none;
+  margin-left: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #f5f5f2;
+}
+
+.fa-star, .fa-link {
+  padding-bottom: 10px;
+  padding-right: 20px;
+}
+
+.title-list-links {
+  width: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  font-size: 16px;
+  padding: 0;
+  text-decoration: none;
+}
+
+.title-list-links .link {
+  padding-bottom: 15px;
+  border-left: 5px solid #333333;
+}
+
+.title-list-links .link:hover {
+  padding-bottom: 15px;
+  background-color: #464343dc;
+  border-left: 5px solid orange;
+}
+
+.title-list-links a {
+  color: #979797;
+}
+
+.sidebar-manager {
+  border-top: 2px solid grey;
+  margin-top: 40px;
+  color: grey;
+  font-size: 15px;
+  padding-left: 10px;
+}
+
+.sidebar-manager .manager-wrapper {
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.sidebar-manager .avatar-display {
+  display: inline-block;
+  position: relative;
+}
+
+.sidebar-manager .online {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.sidebar-manager p {
+  -ms-flex-align: center;
+      align-items: center;
+  color: #56819F;
+}
+
+.sidebar-manager h3 {
+  margin: 20px 0;
+}
+
+.sidebar-manager .avatar {
+  height: 50px;
+  width: 50px;
+  border-radius: 30px;
+}
+
+.user-side {
+  display: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-direction: column;
+      flex-direction: column;
+}
+
+.user-side .user-box {
+  color: #979797;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  padding: 15px 0;
+  text-align: center;
+}
+
+.user-side .user-box .user-box-text {
+  padding-right: 15px;
+}
+
+.hamburger-open {
+  transform: translateX(340px);
+}
+
+@media (max-width: 768px) {
+  .icon {
+    cursor: pointer;
+    display: block;
+  }
+  .sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 200px;
+    left: -340px;
+    transition: transform 0.3s ease-in-out;
+  }
+  .user-side {
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 /*# sourceMappingURL=style.css.map */
