--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,10 +1,17 @@
 /* Colors */
-$paragraph-color: #000000;
-$brand-main-color: #ff0000;
+$paragraph-color: #b3adad;
+$brand-main-color: #ff9e0df8;
+$sidebar-color: #333333;
+$sidebar-color-font: #f5f5f2;
 
 /* Font sizes */
-$paragraph-font-size: 16px;
+$text-font-size: 16px;
+$capital-font-size: 25px;
 
 /* Fonts */
 $brand-font: "Open Sans", Helvetica, Arial;
 $paragraph-font: "Open Sans", Helvetica, Arial;
+
+
+/* Other */
+$transition: transform .3s ease-in-out;
