--- a/sass/sections/_section-general.scss
+++ b/sass/sections/_section-general.scss
@@ -41,7 +41,7 @@ input {
   margin-top: 20px;
 }
 
-.details {
+.section-details {
   border-bottom: 1px solid grey;
   padding-bottom: 5px;
   margin-bottom: 30px;
@@ -105,7 +105,7 @@ input {
     width: auto;
   }
 
-  .details {
+  .section-details {
     min-width: 50px;
   }
 }
