--- a/css/style.css
+++ b/css/style.css
@@ -341,41 +341,54 @@ template {
   display: none;
 }
 
-.top-bar {
+/*.top-bar {
   background-color: white;
-  position: -webkit-sticky;
   position: sticky;
   border-bottom: 1px solid gray;
-  -ms-flex-pack: end;
-      justify-content: flex-end;
+  justify-content: flex-end;
 }
-
+.user{
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  justify-content: flex-end;
+  border-bottom: 2px solid gray;
+  .user-box {
+    display: flex;
+    align-items: center;
+    border-right: 1px solid gray;
+    border-left: 1px solid gray;
+    padding: 10px 0;
+    text-align: center;
+    svg {
+      height: 20px;
+    }
+  }
+}*/
 .user {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: row;
       flex-direction: row;
-  background-color: white;
-  width: 100%;
-  height: 100%;
   -ms-flex-pack: end;
       justify-content: flex-end;
-  border-bottom: 2px solid gray;
 }
 
-.user .user-box {
+.user li {
+  list-style-type: none;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
       align-items: center;
-  border-right: 1px solid gray;
-  border-left: 1px solid gray;
-  padding: 10px 0;
   text-align: center;
+  padding: 10px 0;
 }
 
-.user .user-box svg {
+.user li svg {
   height: 20px;
+  width: 20px;
 }
 
 .content-general {
