--- a/sass/sections/_top-bar.scss
+++ b/sass/sections/_top-bar.scss
@@ -24,3 +24,19 @@
     }
   }
 }
+/*.user {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  li{
+    list-style-type: none;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding: 10px 0;
+    svg {
+      height: 20px;
+      width: 20px;
+    }
+  }
+}*/
