--- a/css/style.css
+++ b/css/style.css
@@ -341,338 +341,11 @@ template {
   display: none;
 }
 
-/*.top-bar {
-  background-color: white;
-  position: sticky;
-  border-bottom: 1px solid gray;
-  justify-content: flex-end;
-}
-.user{
-  display: flex;
-  flex-direction: row;
-  background-color: white;
-  width: 100%;
-  height: 100%;
-  justify-content: flex-end;
-  border-bottom: 2px solid gray;
-  .user-box {
-    display: flex;
-    align-items: center;
-    border-right: 1px solid gray;
-    border-left: 1px solid gray;
-    padding: 10px 0;
-    text-align: center;
-    svg {
-      height: 20px;
-    }
-  }
-}*/
-.user {
+.top-menu {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-direction: row;
       flex-direction: row;
-  -ms-flex-pack: end;
-      justify-content: flex-end;
-}
-
-.user li {
   list-style-type: none;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-      align-items: center;
-  text-align: center;
-  padding: 10px 0;
-}
-
-.user li svg {
-  height: 20px;
-  width: 20px;
-}
-
-.content-general {
-  background-color: white;
-  height: 800px;
-  margin: 15px;
-}
-
-h2 {
-  color: #979797;
-  padding: 10px;
-  font-size: 16px;
-}
-
-.form-data {
-  display: inline-block;
-  border-radius: 2px;
-  border: 1px solid #E3E3E3;
-  margin-right: 15px;
-}
-
-.form-data input[type=text] {
-  border-right: 1px solid grey;
-}
-
-input {
-  padding: 9px;
-  width: 170px;
-  margin: 0;
-  outline-style: none;
-  font-family: "Roboto", sans-serif;
-  border: none;
-}
-
-.section-wrapper {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
-  width: 700px;
-  margin: 0 auto;
-}
-
-.section {
-  margin-top: 20px;
-}
-
-.section-details {
-  border-bottom: 1px solid grey;
-  padding-bottom: 5px;
-  margin-bottom: 30px;
-  min-width: 300px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
-  color: gray;
-}
-
-.section-details h3 {
-  margin: 0;
-  display: inline-block;
-}
-
-.chart {
-  margin: 20px;
-  text-align: center;
-  color: gray;
-}
-
-.chart canvas {
-  max-width: 60%;
-  height: 400px !important;
-  margin: 0 auto;
-}
-
-.data {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  width: 100%;
-  border-bottom: 1px solid grey;
-  margin-top: 20px;
-  padding-bottom: 20px;
-}
-
-.btn {
-  background-color: orange;
-  height: 40px;
-  width: 40px;
-  display: inline-block;
-  border: none;
-  border-radius: 4px;
-  text-align: center;
-}
-
-.btn svg {
-  fill: white;
-  height: 40px;
-  padding: 0;
-}
-
-.btn:hover {
-  cursor: pointer;
-  opacity: 0.5;
-}
-
-@media (max-width: 768px) {
-  .section-wrapper {
-    max-width: 700px;
-    display: block;
-    width: auto;
-  }
-  .section-details {
-    min-width: 50px;
-  }
-}
-
-h1 {
-  font-family: 'Dancing Script', cursive;
-  color: #f5f5f2;
-  margin-left: 5px;
-}
-
-.aside-logo {
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
-  -ms-flex-align: center;
-      align-items: center;
-  padding: 0 10px;
-  width: 150px;
-}
-
-.icon {
-  display: none;
-}
-
-.sidebar {
-  background-color: #333333;
-  position: -webkit-sticky;
-  position: sticky;
-  height: 100vh;
-}
-
-.side-mobile {
-  background-color: #333333;
-}
-
-.fa-bars {
-  display: inline-block;
-  color: #f5f5f2;
-  padding-left: 20px;
-}
-
-.fas, .far {
-  text-decoration: none;
-  margin-left: 10px;
-}
-
-a {
-  text-decoration: none;
-  color: #f5f5f2;
-}
-
-.fa-star, .fa-link {
-  padding-bottom: 10px;
-  padding-right: 20px;
-}
-
-.title-list-links {
-  width: 100%;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
-  -ms-flex-direction: column;
-      flex-direction: column;
-  font-size: 16px;
-  padding: 0;
-  text-decoration: none;
-}
-
-.title-list-links .link {
-  padding-bottom: 15px;
-  border-left: 5px solid #333333;
-}
-
-.title-list-links .link:hover {
-  padding-bottom: 15px;
-  background-color: #464343dc;
-  border-left: 5px solid orange;
-}
-
-.title-list-links a {
-  color: #979797;
-}
-
-.sidebar-manager {
-  border-top: 2px solid grey;
-  margin-top: 40px;
-  color: grey;
-  font-size: 15px;
-  padding-left: 10px;
-}
-
-.sidebar-manager .manager-wrapper {
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.sidebar-manager .avatar-display {
-  display: inline-block;
-  position: relative;
-}
-
-.sidebar-manager .online {
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.sidebar-manager p {
-  -ms-flex-align: center;
-      align-items: center;
-  color: #56819F;
-}
-
-.sidebar-manager h3 {
-  margin: 20px 0;
-}
-
-.sidebar-manager .avatar {
-  height: 50px;
-  width: 50px;
-  border-radius: 30px;
-}
-
-.user-side {
-  display: none;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-direction: column;
-      flex-direction: column;
-}
-
-.user-side .user-box {
-  color: #979797;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-align: center;
-      align-items: center;
-  padding: 15px 0;
-  text-align: center;
-}
-
-.user-side .user-box .user-box-text {
-  padding-right: 15px;
-}
-
-.hamburger-open {
-  transform: translateX(340px);
-}
-
-@media (max-width: 768px) {
-  .icon {
-    cursor: pointer;
-    display: block;
-  }
-  .sidebar {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    width: 200px;
-    left: -340px;
-    transition: transform 0.3s ease-in-out;
-  }
-  .user-side {
-    display: -ms-flexbox;
-    display: flex;
-  }
 }
 /*# sourceMappingURL=style.css.map */
