--- a/css/style.css
+++ b/css/style.css
@@ -345,11 +345,12 @@ template {
 .topnav {
   background-color: #333;
   overflow: hidden;
+  padding-left: 1000px;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: right;
+  float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -382,7 +383,7 @@ template {
 
 .side-menu h3 {
   color: white;
-  font-size: 40px;
+  font-size: 35px;
 }
 
 /* Sidebar links */
