--- a/sass/sections/_top-bar.scss
+++ b/sass/sections/_top-bar.scss
@@ -2,11 +2,12 @@
 .topnav {
   background-color: #333;
   overflow: hidden;
+  padding-left: 950px;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: right;
+  float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
