--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,94 @@ template {
   color: white;
 }
 
+.content {
+  background-color: white;
+  height: 800px;
+  margin: 0;
+}
+
+.box-wrapper {
+  margin-top: 20px;
+}
+
+.statistics-box {
+  border-bottom: 1px solid grey;
+  padding-bottom: 5px;
+  margin-bottom: 30px;
+  min-width: 300px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  color: gray;
+}
+
+.statistics-box h4 {
+  margin: 0;
+  display: inline-block;
+}
+
+.choose-date {
+  display: inline-block;
+  border-radius: 2px;
+  border: 1px solid #E3E3E3;
+  margin-right: 15px;
+}
+
+.choose-date input[type=text] {
+  border-right: 1px solid grey;
+}
+
+input {
+  padding: 9px;
+  width: 170px;
+  margin: 0;
+  outline-style: none;
+  font-family: "Roboto", sans-serif;
+  border: none;
+}
+
+.statistics {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  width: 700px;
+  margin: 0 auto;
+}
+
+.btn {
+  background-color: orange;
+  height: 40px;
+  width: 40px;
+  display: inline-block;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+}
+
+.btn svg {
+  fill: white;
+  height: 40px;
+  padding: 0;
+}
+
+.btn:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
+
+.data {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  width: 100%;
+  border-bottom: 1px solid grey;
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+
 /* The side navigation menu */
 .side-menu {
   margin: 0;
